# anki-vocab-builder

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
anki_vocab_builder/: config.py  main.py
anki_vocab_builder/card_generator/: anki_generator.py  model_templates.py
anki_vocab_builder/enrichment/: openai_client.py  openai_prompts.py
anki_vocab_builder/parsers/: kindle_highlights.py  quiz_parser.py
anki_vocab_builder/storage/: __init__.py  csv_storage.py  models.py
development_notes/: development.md
scripts/: lint.sh
tests/: conftest.py  test_integration.py
tests/card_generator/: test_anki_generator.py  test_model_templates.py
tests/enrichment/: test_openai_client.py
tests/parsers/: test_kindle_highlights.py  test_quiz_parser.py  test_quiz_parser_integration.py
tests/storage/: test_csv_storage.py
